Fixed UI for change password form

--- a/client/src/app/components/change-password/change-password.component.html
+++ b/client/src/app/components/change-password/change-password.component.html
@@ -4,22 +4,28 @@
     <div class="my-2">
         <app-error [message]="error"></app-error>
     </div>
-    <form class="d-flex col-9" style="flex-direction: column; align-items: center;" (submit)="changePassword()">
+    <form 
+      class="d-flex col-9" 
+      style="flex-direction: column; justify-content: center; align-items: center;" 
+      (submit)="changePassword()"
+    >
         <input 
             type="password" 
             name="password" 
             id="" 
-            class="text-field my-2 col-12" 
+            class="text-field my-2" 
             placeholder="Password"
             [(ngModel)]="password"
+            style="width: 100%;"
         >
         <input 
             type="password" 
             name="confimPassword" 
             id="" 
-            class="text-field my-2 col-12" 
+            class="text-field my-2" 
             placeholder="Confirm password"
             [(ngModel)]="confirmPassword"
+            style="width: 100%;"
         >
         <input type="submit" value="Save" class="btn-1">
     </form>
