--- a/client/src/app/components/song-detail/song-detail.component.html
+++ b/client/src/app/components/song-detail/song-detail.component.html
@@ -1,11 +1,10 @@
 <div style="padding-top: 5rem; padding-bottom: 9rem;">
     <app-back [url]="backUrl"></app-back>
-    <div *ngIf="showAddToPlaylist">
-        <app-add-to-playlist-modal 
-            (onClose)="showAddToPlaylist = false; getData();"
-            [song]="song"
-        ></app-add-to-playlist-modal>
-    </div>
+    <ng-template #content let-modal>
+      <app-add-to-playlist-modal 
+      style="width: 500px; height: 500px;" 
+      [song]="song"></app-add-to-playlist-modal>
+    </ng-template>
     <div>
         <div>
             <div class="d-flex mx-auto" style="justify-content: center;">
@@ -19,7 +18,7 @@
                     <button 
                         class="btn-3" 
                         style="align-self: flex-end;" 
-                        (click)="showAddToPlaylist = !showAddToPlaylist"
+                        (click)="open(content)"
                     >
                         Add to collection
                     </button>
